[package]
name = "rust-port-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = {version = "0.9", features = ["derive", "bright-color"]}
tokio = {version = "1.37.0", features = ["full"]}
